# genai-tag-db-dataset-builder

./: .gitignore  README.md  pyproject.toml  test_builder_ci.py
.github/workflows/: build-and-publish.yml  ci.yml  update-tag-dataset-ci.yml
Kaomoji_txt/: kbIME.txt  town_original.txt
builder_ci/: __init__.py  fetcher.py  main.py  manifest.py  publisher.py  readme.py  sources.yml
license_builds/: README.md  include_cc0_sources.txt  include_cc4_sources.txt  include_mit_sources.txt
migrations/: 2025_12_18_add_tag_status_deprecated_and_source_created_at.sql
overrides/: alias_resolution.yml
src/genai_tag_db_dataset_builder/: __init__.py  builder.py  metadata.py  upload.py
src/genai_tag_db_dataset_builder/adapters/: __init__.py  base_adapter.py  csv_adapter.py  hf_translation_adapter.py  json_adapter.py  parquet_adapter.py  site_tags_adapter.py  tags_v4_adapter.py
src/genai_tag_db_dataset_builder/core/: __init__.py  alias_resolution.py  column_classifier.py  conflicts.py  database.py  exceptions.py  master_data.py  merge.py  normalize.py  overrides.py
src/genai_tag_db_dataset_builder/tools/: build_dual_license.py  migrate_db.py  report_bad_unicode_tags.py  report_db_health.py  report_prefix_inversions.py
src/genai_tag_db_dataset_builder/utils/: __init__.py
tests/: __init__.py
tests/integration/: test_merge_workflow.py  test_two_pass_alias_registration.py
tests/unit/: test_alias_resolution.py  test_builder_smoke.py  test_column_classifier.py  test_conflicts.py  test_csv_adapter.py  test_csv_utf8_salvage.py  test_database.py  test_hf_translation_adapter.py  test_idempotent_upserts.py  test_json_adapter.py  test_manifest.py  test_master_data.py  test_merge.py  test_normalize.py  test_overrides.py  test_parquet_adapter.py  test_parquet_danbooru_view_export.py  test_prefix_repair.py  test_site_tags_adapter.py  test_source_filters.py  test_tags_v4_adapter.py  test_translation_cleanup.py  test_usage_count_snapshot_replace.py
