[project]
name = "genai-tag-db-dataset-builder"
version = "0.1.0"
description = "Dataset builder for unified generative AI tag database"
authors = [
    {name = "NEXTAltair", email = "contact@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "huggingface-hub>=0.20.0",
    "datasets>=2.18.0",
    "sqlalchemy>=2.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=genai_tag_db_dataset_builder",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=55",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, requires external resources)",
    "slow: Slow tests (requires large datasets)",
]

[tool.coverage.run]
source = ["genai_tag_db_dataset_builder"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/genai_tag_db_dataset_builder/builder.py",
    "*/genai_tag_db_dataset_builder/metadata.py",
    "*/genai_tag_db_dataset_builder/upload.py",
]

[tool.coverage.report]
fail_under = 55
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
target-version = "py312"
line-length = 108
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["ARG"]  # unused arguments in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
